    - Abort with an error if $source_dependencies is defined.
    - Don't export $sudo or $chroot_mode.
    - Don't define $sudo or $chroot_mode.
    - Remove sudo sanity checks.
    - Abort with an error if $sudo or $chroot_mode are defined.
    - Don't export $chroot_only.
    - Don't define $chroot_only.
    - Abort with an error if $chroot_only is defined.
  * sbuild.conf:
    - Remove $source_dependencies.
    - Remove $sudo.
    - Remove $chroot_only.
  * sbuild.conf.local: Remove $source_dependencies.
  * sbuild-setup.7.in:
    - Remove sudo setup.
    - Update user section to document sbuild group membership and
      add_sbuild_user.  Remove chroot setup, which is now handled by
      schroot (Closes: #413524).
  * bin/README.bins: Remove sudo from extra package list.
  * bin/updatechroot, bin/upgradechroot, bin/chrapt: Remove chroot_mode.
  * chroot/add_sbuild_user:
    - Remove sudo setup instructions and copying of /etc/sudoers to the
      chroot.
    - Rewrite in perl.  Only call adduser; all other chroot setup is
      taken care of by the 50sbuild schroot chroot setup script
      (Closes: #413908).
  * TODO: New file.  Document needed changes.

 -- Roger Leigh <rleigh@debian.org>  Sat, 10 Mar 2007 11:06:31 +0000

sbuild (0.53) unstable; urgency=low

  * Sbuild/Conf.pm: Add and export check_watches configuration variable.
  * sbuild:
    - Set umask to 022 so that dpkg-buildpackage always runs with a sane
      umask (Closes: #405836).
    - check_watches: Don't check watches if check_watches configuration
      variable isn't set (Closes: #397123).
    - get_apt_policy: Allow ~ in version numbers.  Thanks to Frank
      Lichtenheld for this patch (Closes: #407293).
    - When running apt-cache, divert STDOUT to the package log, so that
      warnings do not get mailed separately (Closes: #399178).
    - fetch_source_files:
      + Correct indentation, and error with brace placement which caused
        apt-cache output to not be used.